Fri May 22 16:00:00 1998  Doug Evans  <devans@canuck.cygnus.com>

	* cgen-asm.in (insert_normal): Handle empty fields and 64 bit hosts.
	* cgen-dis.in (extract_normal): Likewise.
	* m32r-asm.c,m32r-dis.c: Regenerate.

start-sanitize-sky
Fri May 22 11:44:10 1998  Doug Evans  <devans@canuck.cygnus.com>

	* dvp-opc.c (parse_dotdest): Missing dest -> xyzw.

end-sanitize-sky
start-sanitize-r5900
Wed May 20 00:22:27 1998  Jeffrey A Law  (law@cygnus.com)

	* mips-opc.c (multu1): Add two operand variant for the r5900.

end-sanitize-r5900
Tue May 19 17:36:08 1998  Ian Lance Taylor  <ian@cygnus.com>

	* mips-dis.c (print_mips16_insn_arg): Handle type ']' correctly
	with a shift count of 0.

start-sanitize-r5900
Mon May 18 14:27:06 1998  Frank Ch. Eigler  <fche@cygnus.com>

	* mips-opc.c (mult1): Add two-operand variety of mult1 for R5900.

Mon May 18 11:44:00 1998  Jeffrey A Law  (law@cygnus.com)

	* mips-dis.c (print_insn_arg): Handle ';' opcode completer.
	(_print_insn_mips): Likewise.
	* vu0.h (vopmula, vopmsub): Correctly handle opcode/operand
	completers.

end-sanitize-r5900
Fri May 15 14:58:31 1998  Doug Evans  <devans@seba.cygnus.com>

	* cgen-opc.c (cgen_hw_lookup_by_name): Renamed from cgen_hw_lookup.
	(cgen_hw_lookup_by_num): New function.

start-sanitize-m32rx
	* m32r-opc.c, m32r-opc.h: Regenerate, delete h-abort.

end-sanitize-m32rx
Wed May 13 17:03:59 1998  Doug Evans  <devans@canuck.cygnus.com>

	* m32r-asm.c: Regenerate (handle uppercase HIGH/SHIGH/LOW/SDA).

Wed May 13 14:34:31 1998  Mark Alexander  <marka@cygnus.com>

	* sparc-dis.c (print_insn_sparc): Always fetch instructions
	as big-endian on SPARClite.

start-sanitize-m32rx
Tue May 12 13:39:51 1998  Nick Clifton  <nickc@cygnus.com>

	* m32r-opc.c: Regenerated - SPECIAL attribute added to some
	insns. 
	* m32r-opc.h: Regenerated - SPECIAL attribute added to some
	insns.
	
end-sanitize-m32rx
Tue May 12 11:46:31 1998  Richard Henderson  <rth@cygnus.com>
