@@ -1,3 +1,8 @@
+Tue May 26 16:14:39 1998  Nick Clifton  <nickc@cygnus.com>
+
+	* d30v-opc.c (d30v_format_table): Change definition of SHORT_B3
+	and SHORT_B3b formats to use Rb instead of Ra.
+
 Fri May 22 16:00:00 1998  Doug Evans  <devans@canuck.cygnus.com>
 
 	* cgen-asm.in (insert_normal): Handle empty fields and 64 bit hosts.
